compiler/tests/sct-checker/success/basic.jazz
#[sct="transient → public"]
export fn nothing(reg u64 a) -> reg u64 {
  _ = #init_msf();
  return a;
}

#[sct="secret → secret"]
export fn secret(reg u64 a) -> reg u64 {
  return a;
}

#[sct="transient × secret → secret"]
export fn branch(reg u64 a, reg u64 b c) -> reg u64 {
  reg u64 r;
  _ = #init_msf();
  if a == 0 {
    r = b;
  } else {
    r = c;
  }
  return c;
}

#[sct="transient × secret → secret"]
export fn branchless(reg u64 a, reg u64 b c) -> reg u64 {
  c = b if a == 0;
  return c;
}

u64[2] not = { 1, 0 };

#[sct = "transient → public"]
export fn forloop(reg u64 a) -> reg u64 {
  reg u64 msf t;
  inline int i;
  msf = #init_msf();
  for i = 0 to 2 {
    t = not[i];
    t = #protect(t, msf); // TODO: this protect should not be needed
    a ^= t;
  }
  return a;
}

#[sct = "transient → public"]
export fn whileloop(reg u64 a) -> reg u64 {
  reg u64 msf t i;
  msf = #init_msf();
  ?{}, i = #set0();
  while (i < 2) {
    msf = #update_msf(i < 2, msf);
    t = not[i];
    t = #protect(t, msf);
    a ^= t;
    i += 1;
  }
  return a;
}

#[sct = "transient → transient"]
export fn archetype(reg u64 i) -> reg u64 {
  reg u64 msf r t;
  msf = #init_msf();
  r = 0;
  if i < 2 {
    msf = #update_msf(i < 2, msf);
    t = not[i];
    t = #protect(t, msf);
    r = not[t];
  }
  return r;
}

#[sct="transient × transient → public"]
export fn load(reg u64 p i) -> reg u64 {
  reg u64 msf r;
  reg bool b;
  msf = #init_msf();
  r = 0;
  b = i < 2;
  if b {
    msf = #update_msf(b, msf);
    r = [p + 8 * i];
    #declassify(r);
    r = #protect(r, msf);
  }
  return r;
}

#[sct = "transient × transient × transient × secret → ()"]
export fn store(reg u64 p i q, reg u64 v) {
  reg u64 msf j;
  msf = #init_msf();
  if i < 2 {
    msf = #update_msf(i < 2, msf);
    j = [p + 8 * i];
    #declassify(j);
    j = #protect(j, msf);
    [q + 8 * j] = v;
  }
}

#[sct="public * { ptr: public, val: transient } * { ptr: public, val: secret } -> { ptr: public, val: secret }"]
fn xof_init(
  reg u64 j,
  reg ptr u64[25] state,
  reg ptr u8[32] rho)
  ->
  reg ptr u64[25]
{
  reg u64 t;
  t = rho[:u64 j];
  state[j] = t;
  return state;
}
